--- a/ToobarTest/app/src/main/res/values/strings.xml
+++ b/ToobarTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ToolbarTest</string>
+
+    <string name="search">search</string>
+    <string name="homepage">首页</string>
 </resources>
