--- a/ToobarTest/app/src/main/res/values/strings.xml
+++ b/ToobarTest/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="search">search</string>
     <string name="homepage">首页</string>
+    <string name="share">share</string>
 </resources>
