添加应用栏

--- a/WanAndroid/app/src/main/res/values/strings.xml
+++ b/WanAndroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">WanAndroid</string>
+    <string name="app_name">Zero</string>
+    <string name="toolbar_search">搜索</string>
 </resources>
