--- a/SwordDemoLibrary/loginlibrary/src/main/res/values/strings.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="account_login">账号登录</string>
     <string name="get_make_sure_num">获取验证码</string>
     <string name="input_phone_hint">请输入手机号</string>
+    <string name="verity_dialog_title">请输入动态验证码</string>
+    <string name="verify_tint">验证码发送至：</string>
+    <string name="phone_number_sample">181****3575</string>
+    <string name="count_down_sample">55S</string>
+    <string name="get_verify_code_again"><u>重新获取</u></string>
 </resources>
