--- a/SwordDemoLibrary/loginlibrary/src/main/res/values/strings.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="register_mean_aggren">注册即代表您同意</string>
     <string name="user_protocol"><u>用户服务注册协议</u></string>
-    <string name="register_now">下一步</string>
+    <string name="next_step">下一步</string>
     <string name="visitor_login">游客模式</string>
     <string name="account_login">账号登录</string>
     <string name="get_make_sure_num">获取验证码</string>
@@ -12,4 +12,13 @@
     <string name="phone_number_sample">181****3575</string>
     <string name="count_down_sample">55S</string>
     <string name="get_verify_code_again"><u>重新获取</u></string>
+    <string name="cancel">取 消</string>
+    <string name="confirm">确 定</string>
+    <string name="token_delete_info">确定将181*****3575从本地记录中删除吗？</string>
+    <string name="password_setup_title">密码设置</string>
+    <string name="input_verify_code">请输入验证码</string>
+    <string name="get_verify_code">获取验证码</string>
+    <string name="pass_setup_input_pass_once">请输入想要设置的密码</string>
+    <string name="pass_setup_input_pass_twice">请重复输入想要设置的密码</string>
+    <string name="verify_code_login">验证码登录</string>
 </resources>
