--- a/SwordDemoLibrary/UserInterface/src/main/res/values/strings.xml
+++ b/SwordDemoLibrary/UserInterface/src/main/res/values/strings.xml
@@ -4,7 +4,11 @@
     <string name="fire">fire</string>
     <string name="cancel">cancel</string>
     <string name="title">dialog title</string>
-    
+    <string name="ok">OK</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="signin">sign in</string>
+
     <array name="color_array">
         <item>Red</item>
         <item>Green</item>
